[gd_scene load_steps=14 format=2]

[ext_resource path="res://Objects/PhysicsBody/Character/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/PhysicsBody/Character/Enemies/Boss_Computer/Boss_Computer.gd" type="Script" id=2]
[ext_resource path="res://Assets/Blocks/Grey_block.png" type="Texture" id=3]
[ext_resource path="res://Objects/PhysicsBody/Character/Enemies/Boss_Computer/Small_nodes/Cannon_Player_seeking.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objects/PhysicsBody/Character/Enemies/Boss_Computer/Small_nodes/Minion_Spawner.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Blocks/Blue_block.png" type="Texture" id=6]
[ext_resource path="res://Objects/PhysicsBody/Character/Enemies/Boss_Computer/Small_nodes/Boss_Barrier.gd" type="Script" id=7]
[ext_resource path="res://Objects/PhysicsBody/Character/Enemies/Boss_Computer/Small_nodes/Large_cannon.tscn" type="PackedScene" id=8]

[sub_resource type="CapsuleShape2D" id=4]
resource_local_to_scene = true
radius = 15.0
height = 40.0002

[sub_resource type="RectangleShape2D" id=2]
resource_local_to_scene = true
extents = Vector2( 40, 15 )

[sub_resource type="RectangleShape2D" id=5]
resource_local_to_scene = true
extents = Vector2( 40, 15 )

[sub_resource type="CapsuleShape2D" id=6]
radius = 20.0
height = 60.0

[sub_resource type="CapsuleShape2D" id=7]
radius = 20.0
height = 60.0

[node name="Boss_Computer" instance=ExtResource( 1 )]
collision_layer = 4096
collision_mask = 8192
script = ExtResource( 2 )
gravity = 0
stats = {
"alive": true,
"double_jump": 0,
"double_jumps": 1,
"gun": 0,
"gun_max_cycle": 3,
"health": 100,
"max_health": 100,
"wall_jump": true
}

[node name="Sprite" parent="." index="0"]
position = Vector2( 160, 20 )
rotation = -1.5708
scale = Vector2( 1.5, 4 )
texture = ExtResource( 3 )
hframes = 1
vframes = 1

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 160, 20 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="FloorRay" parent="." index="2"]
position = Vector2( 160, 30 )
enabled = false
exclude_parent = false

[node name="Hurtbox" parent="." index="3"]
position = Vector2( 160, 20 )
collision_layer = 0
collision_mask = 8192
monitorable = false

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, 0 )
shape = SubResource( 2 )

[node name="Hurtbox - Environment" parent="." index="4"]
visible = false
position = Vector2( 160, 20 )
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox - Environment" index="0"]
shape = SubResource( 5 )

[node name="Large_cannon" parent="." index="5" instance=ExtResource( 8 )]

[node name="Cannon_Player_seeking" parent="." index="6" instance=ExtResource( 4 )]
visible = false
position = Vector2( 50, 30 )
rotation = 0.785398

[node name="Cannon_Player_seeking2" parent="." index="7" instance=ExtResource( 4 )]
visible = false
position = Vector2( 270, 30 )
rotation = 2.35619

[node name="Minion_Spawner" parent="." index="8" instance=ExtResource( 5 )]
visible = false
minion_behaviour = 2

[node name="Minion_Spawner2" parent="." index="9" instance=ExtResource( 5 )]
visible = false
position = Vector2( 290, 30 )
minion_behaviour = 1

[node name="Barrier" type="StaticBody2D" parent="." index="10"]
position = Vector2( 160, 25 )
z_index = 100
collision_mask = 0
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="Barrier" index="0"]
modulate = Color( 1, 1, 1, 0.392157 )
scale = Vector2( 5, 2 )
texture = ExtResource( 6 )

[node name="Hurtbox" type="Area2D" parent="Barrier" index="1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barrier/Hurtbox" index="0"]
position = Vector2( -7.62939e-06, 0 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barrier" index="2"]
rotation = 1.5708
shape = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="11"]

[connection signal="area_entered" from="Barrier/Hurtbox" to="Barrier" method="_on_Hurtbox_area_entered"]
